Remove depencency on Java 11, fixes #8